fix:hid the scrollbar

--- a/src/index.css
+++ b/src/index.css
@@ -12,3 +12,7 @@ body,
   box-sizing: border-box;
   font-family: "Poppins", sans-serif;
 }
+
+.card-container::-webkit-scrollbar {
+  display: none;
+}
